# fastnb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
benchmarks/: plot_architecture.py  plot_results.py
benchmarks/results/: benchmark_all_patients.json  table1_timing.csv  table2_accuracy.csv
python/: bindings.cpp
python/fastnb/: __init__.py
src/: nb_classifier.cpp  nb_classifier.h
tests/cpp/: test_nb_classifier.cpp
tests/python/: test_fastnb.py
