[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "fastnb"
version = "1.0.0"
description = "High-performance C++ Naive Bayes classifier for SILVA-based 16S rRNA taxonomy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Marcin Nawalny"},
    {name = "Jaroslaw Kurek", email = "jaroslaw_kurek@sggw.edu.pl"},
]
keywords = ["16S", "rRNA", "taxonomy", "naive-bayes", "microbiome", "QIIME2", "SILVA"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy>=1.21", "pandas>=1.3"]

[project.urls]
Homepage = "https://github.com/kurekj/fastnb"
Repository = "https://github.com/kurekj/fastnb"

[tool.scikit-build]
cmake.build-type = "Release"
